updated the background to fix issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -40,11 +40,6 @@ html {
 	font-size: 16px;
 }
 
-body {
-	font-family: 'Red Hat Display', sans-serif;
-	background-color: var(--neutral--blue-fade);
-}
-
 img {
 	max-width: 100%;
 }
@@ -74,13 +69,20 @@ a:focus {
 /* **** Mobile Viewport ****/
 
 /* * Body Styles */
-.center-card {
-	display: grid;
-	min-height: 97vh;
-	place-items: center;
+body {
 	background: url(../images/pattern-background-mobile.svg) center/cover no-repeat;
 	background-position: top;
 	background-size: contain;
+	font-family: 'Red Hat Display', sans-serif;
+	background-color: var(--neutral--blue-fade);
+}
+	
+
+.center-card {
+	display: grid;
+	place-items: center;
+	min-height: 93vh;
+	margin-top: 1.5rem;
 }
 
 /* * Card Styles */
@@ -90,12 +92,13 @@ a:focus {
 	max-width: 28.125rem;
 	border-radius: 20px;
 	box-shadow: 0px 40px 50px -10px rgba(91, 117, 203, 0.3);
+	margin-bottom: 1.5rem;
 }
 
 /* * Card Hero Image Styles */
 .card__hero {
 	background: url("../images/illustration-hero.svg") center/cover no-repeat; 
-	height: 160px;
+	height: 10rem;
 	border-radius: 16px 16px 0 0;
 	margin-bottom: 2rem;
 }
